--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <ul>
                 <li><a href="../lab9/bai2.html" target="page">Bài 9</a></li>
                 <li><a href="../lab10/bai2.html" target="page">Bài 10</a></li>
-                <li><a href="../lab11/bai2.html" target="page">Bài 11</a></li>
-                <li><a href="../lab12/page/bai2.html" target="page">Bài 12</a></li>
+                <li><a href="/lab11/bai2.html" target="page">Bài 11</a></li>
+                <li><a href="/page/bai2.html" target="page">Bài 12</a></li>
             </ul>
         </article>
         <aside>
