--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
                 <li><a href="../lab9/bai2.html" target="page">Bài 9</a></li>
                 <li><a href="../lab10/bai2.html" target="page">Bài 10</a></li>
                 <li><a href="/lab11/bai2.html" target="page">Bài 11</a></li>
-                <li><a href="page/bai2.html" target="page">Bài 12</a></li>
+                <li><a href="/page/bai2.html" target="page">Bài 12</a></li>
             </ul>
         </article>
         <aside>
