--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
@@ -20,11 +20,11 @@
         </nav>
         <article>
             <ul>
-                <li><a href="/page/bai2.html" target="page">Bài 12</a></li>
+                <li><a href="./page/bai2.html" target="page">Bài 12</a></li>
             </ul>
         </article>
         <aside>
-            <iframe name="page" src="/page/bai1.html" scrolling="auto" frameborder="0"></iframe>
+            <iframe name="page" src="./page/bai1.html" scrolling="auto" frameborder="0"></iframe>
         </aside>
 
     </div>
