--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <article>
             <ul>
-                <li><a href="./page/bai2.html" target="page">Bài 12</a></li>
+                <li><a href="../page/bai2.html" target="page">Bài 12</a></li>
             </ul>
         </article>
         <aside>
