--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="boxcenter">
         <header>
-           
+
         </header>
 
         <nav>
@@ -20,7 +20,7 @@
         </nav>
         <article>
             <ul>
-                <li><a href="../page/bai2.html" target="page">Bài 12</a></li>
+                <li><a href="../WE17307.github.io/page/bai2.html" target="page">Bài 12</a></li>
             </ul>
         </article>
         <aside>
