--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../WE17307.github.io/bailab12/css/style.css">
     <title>Document</title>
 </head>
 
@@ -20,11 +20,18 @@
         </nav>
         <article>
             <ul>
-                <li><a href="../WE17307.github.io/page/bai2.html" target="page">Bài 12</a></li>
+                <li><a href="">Bài 9.1</a></li>
+                <li><a href="">Bài 9.2</a></li>
+                <li><a href="">Bài 10.1</a></li>
+                <li><a href="">Bài 10.2</a></li>
+                <li><a href="">Bài 11.1</a></li>
+                <li><a href="">Bài 11.2</a></li>
+                <li><a href="../WE17307.github.io/bailab12/page/bai1.html" target="page">Bài 12.1</a></li>
+                <li><a href="../WE17307.github.io/bailab12/page/bai2.html" target="page">Bài 12.2</a></li>
             </ul>
         </article>
         <aside>
-            <iframe name="page" src="./page/bai1.html" scrolling="auto" frameborder="0"></iframe>
+            <iframe name="page" src="../WE17307.github.io/bailab12/page/bai1.html" scrolling="auto" frameborder="0"></iframe>
         </aside>
 
     </div>
