--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <li><a href="">Bài 11.2</a></li>
                 <li><a href="../WE17307.github.io/bailab12/page/bai1.html" target="page">Bài 12.1</a></li>
                 <li><a href="../WE17307.github.io/bailab12/page/bai2.html" target="page">Bài 12.2</a></li>
+                <li><a href="">Bài 13.1</a></li>
+                <li><a href="">Bài 13.2</a></li>
+                <li><a href="">Bài 14.1</a></li>
+                <li><a href="">Bài 14.2</a></li>
             </ul>
         </article>
         <aside>
