--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </nav>
         <article>
             <ul>
-                <li><a href="">Bài 9.1</a></li>
-                <li><a href="">Bài 9.2</a></li>
-                <li><a href="">Bài 10.1</a></li>
-                <li><a href="">Bài 10.2</a></li>
-                <li><a href="">Bài 11.1</a></li>
-                <li><a href="">Bài 11.2</a></li>
+                <li><a href="../WE17307.github.io/bailab9/page/bai9.1.html">Bài 9.1</a></li>
+                <li><a href="../WE17307.github.io/bailab9/page/bai9.2.html">Bài 9.2</a></li>
+                <li><a href="../WE17307.github.io/bailab10/page/bai10.1.html">Bài 10.1</a></li>
+                <li><a href="../WE17307.github.io/bailab10/page/bai10.2.html">Bài 10.2</a></li>
+                <li><a href="../WE17307.github.io/bailab11/page/bai11.1.html">Bài 11.1</a></li>
+                <li><a href="../WE17307.github.io/bailab11/page/bai11.2.html">Bài 11.2</a></li>
                 <li><a href="../WE17307.github.io/bailab12/page/bai12.1.html" target="page">Bài 12.1</a></li>
                 <li><a href="../WE17307.github.io/bailab12/page/bai12.2.html" target="page">Bài 12.2</a></li>
                 <li><a href="">Bài 13.1</a></li>
