--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../WE17307.github.io/bailab12/css/style.css">
-    <title>Document</title>
+    <title>Trần Vĩnh Phúc</title>
 </head>
 
 <body>
