--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <li><a href="../WE17307.github.io/bailab11/page/bai11.2.html" target="page">Bài 11.2</a></li>
                 <li><a href="../WE17307.github.io/bailab12/page/bai12.1.html" target="page">Bài 12.1</a></li>
                 <li><a href="../WE17307.github.io/bailab12/page/bai12.2.html" target="page">Bài 12.2</a></li>
-                <li><a href="" target="page">Bài 13.1</a></li>
-                <li><a href="" target="page">Bài 13.2</a></li>
-                <li><a href="" target="page">Bài 14.1</a></li>
-                <li><a href="" target="page">Bài 14.2</a></li>
+                <li><a href="../WE17307.github.io/bailab13/bai13.1.html" target="page">Bài 13</a></li>
+                <li><a href="../WE17307.github.io/bailab14/page/bai14.1.html" target="page" target="page">Bài 14.1</a></li>
+                <li><a href="../WE17307.github.io/bailab14/page/bai14.2.html" target="page" target="page">Bài 14.2</a></li>
+                <li><a href="../WE17307.github.io/bailab14/page/bai14.3.html" target="page" target="page">Bài 14.3</a></li>
             </ul>
         </article>
         <aside>
