--- a/bailab13/bai13.1.html
+++ b/bailab13/bai13.1.html
@@ -20,7 +20,7 @@
         src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v13.0&appId=275370497921640&autoLogAppEvents=1"
         nonce="l5MbUlAv"></script>
     <h1>Báo Mới</h1>
-    <audio src="../audio/ như phút chốc anh nắm lấy em! Big Rice Piano x NHA.mp4" loop autoplay></audio>
+    <audio src="../bailab12/audio/Giá như phút chốc anh nắm lấy em! Big Rice Piano x NHA.mp4" loop autoplay></audio>
 
     <img src="../bailab13/image/tin1.png" alt="">
     <div class="noidung">
